add score-board component

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,1 +1,9 @@
-<p>game works!</p>
+<div class="playground-container">
+  <div class="game-container">
+    <p>game works!</p>
+
+  </div>
+  <div class="score-board-container">
+    <app-score-board [winners]="gameWinners"></app-score-board>
+  </div>
+</div>
