add user card board

--- a/src/app/game/score-board/score-board.component.html
+++ b/src/app/game/score-board/score-board.component.html
@@ -1,5 +1,5 @@
 <div class="score-container">
   <h1>Leader Board</h1>
 
-
+<app-user-score-card [card]="item" *ngFor="let item of winners"></app-user-score-card>
 </div>
