--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,13 +3,17 @@
   display: flex;
   border: 1px solid black;
   box-sizing: border-box;
+  max-height: 100vh;
+margin: 0;
   .game-container, .score-board-container {
     width: 50%;
     padding: 10px;
+    max-height: 100%;
   }
 
   .score-board-container {
     border-left: 1px solid black;
+    overflow: scroll;
   }
 
 }
