--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,17 @@
 <div class="playground-container">
   <div class="game-container">
-    <p>game works!</p>
+    <form [formGroup]="gameForm" (ngSubmit)="startGame()">
 
+      <select formControlName="difficulty">
+        <option [value]="sett.field" *ngFor="let sett of gameSettings"> {{sett.label}}</option>
+      </select>
+
+      <input type="text" formControlName="name" placeholder="Enter name">
+
+      <button type="submit"
+              [disabled]="gameForm.invalid">Play
+      </button>
+    </form>
   </div>
   <div class="score-board-container">
     <app-score-board [winners]="gameWinners"></app-score-board>
