--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -4,7 +4,7 @@
   border: 1px solid black;
   box-sizing: border-box;
   max-height: 100vh;
-margin: 0;
+  margin: 0;
   .game-container, .score-board-container {
     width: 50%;
     padding: 10px;
@@ -14,6 +14,8 @@ margin: 0;
   .score-board-container {
     border-left: 1px solid black;
     overflow: scroll;
+    overflow-x: hidden;
+
   }
 
 }
