--- a/src/app/shared/user-score-card/user-score-card.component.html
+++ b/src/app/shared/user-score-card/user-score-card.component.html
@@ -1,4 +1,4 @@
 <div class="card-container">
-  <p class="name">{{card.winner || ''}}</p>
+  <p class="name">{{card.winner}}</p>
   <p class="date">{{card.date}}</p>
 </div>
