--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -72,5 +72,18 @@
       width: 25px;
       height: 25px;
     }
+    button.green {
+      background-color: #68ff63 !important;
+    }
+
+    button.red {
+      background-color: #ff5356!important;
+    }
+
+    button.blue {
+      background-color: #6debff;
+    }
   }
 }
+
+
